# test_poetry

./: README.md  Teach.code-profile  pyproject.toml
metanit/: db.sqlite3
metanit/hello/: forms.py  models.py  views.py
metanit/hello/migrations/: 0001_initial.py  0002_order.py  0003_company_product.py
metanit/hello/static/css/: styles.css
metanit/hello/templates/: base.html  complex.html  contact.html  data.html  edit.html  index.html  persons.html
metanit/metanit/: settings.py  urls.py
